--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -21,6 +21,7 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_cache_bypass $http_upgrade;
       root /var/concentration/html;
+      index index.html;
     }
 
     location /cheat {
