sortie d'erreur si une image est corompue

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,20 @@ jobs:
       - name: Check JPEG files
         run: |
           echo "Checking for corrupted JPEG files"
-          # Chercher tous les fichiers .jpg et vérifier leur intégrité avec la commande `file`
+          corrupted=false
+# Chercher tous les fichiers .jpg et vérifier leur intégrité avec la commande `file`
           find . -name '*.jpg' | while read filename; do
             if ! file "$filename" | grep -q 'JPEG image data'; then
               echo "$filename is corrupted"
+              corrupted=true
             else
               echo "$filename is valid"
             fi
           done
+
+          if["$corrupted" = true ]; then
+            exit 1
+          fi
 
   build-memory:
     runs-on: self-hosted
