sortie d'erreur si une image est corompue 10

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
             fi
           done
 
+          echo "Number of corrupted files: ${#corrupted_files[@]}"
           # Vérifier si des fichiers corrompus ont été trouvés
           if [ ${#corrupted_files[@]} -ne 0 ]; then
             echo "Corrupted files found:"
