--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,13 @@ jobs:
       - name: Check JPEG files
         run: |
           echo "Checking for corrupted JPEG files"
-          corrupted_files=()  # Tableau pour stocker les fichiers corrompus
+          corrupted_files=0  # Tableau pour stocker les fichiers corrompus
 
           # Chercher tous les fichiers .jpg et vérifier leur intégrité avec la commande `file`
           find . -name '*.jpg' | while read filename; do
             if ! file "$filename" | grep -q 'JPEG image data'; then
               echo "$filename is corrupted"
-              corrupted_files+=("$filename")  # Ajouter le fichier corrompu au tableau
+              corrupted_files+=1
             else
               echo "$filename is valid"
             fi
@@ -32,7 +32,7 @@ jobs:
 
           echo "Number of corrupted files: ${#corrupted_files[@]}"
           # Vérifier si des fichiers corrompus ont été trouvés
-          if [ ${#corrupted_files[@]} -ne 0 ]; then
+          if [ ${#corrupted_files} -ne 0 ]; then
             echo "Corrupted files found:"
             printf "%s\n" "${corrupted_files[@]}"
             exit 1  # Retourner une erreur si des fichiers sont corrompus
