--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,7 @@ jobs:
             fi
           done
 
-          echo "Number of corrupted files: ${#corrupted_files[@]}"
-          # Vérifier si des fichiers corrompus ont été trouvés
-          if [ ${#corrupted_files} -ne 0 ]; then
-            echo "Corrupted files found:"
-            printf "%s\n" "${corrupted_files[@]}"
-            exit 1  # Retourner une erreur si des fichiers sont corrompus
-          else
-            echo "No corrupted files found."
-          fi
+          echo "Number of corrupted files: ${#corrupted_files}"
   build-memory:
     runs-on: self-hosted
     needs: test-memory # Le job build-memory ne s'exécute qu'après test-memory
